# english-mastery-hub

./: .gitignore  AdminPanelView.qml  AvatarUploader.qml  BackendAdminToolsSection.qml  BannerHero.qml  CMakeLists.txt  ChallengeProgressSection.qml  ChangePasswordView.qml  CheckedInTodaySection.qml  CheckinHistorySection.qml  CheckinSection.qml  ChiTietHoatDong.docx  EditableCallout.qml  GroupDailyChart.qml  GroupDetailView.qml  GroupManagementPage.qml  GroupMemberRankingSection.qml  GroupsBoardSection.qml  LoginView.qml  Main.qml  MockAdminGroupController.qml  MockAdminUserController.qml  MockAppSettingsController.qml  MockAuthController.qml  MockCheckinController.qml  MockGeminiController.qml  MockGroupDetailController.qml  MockNotificationController.qml  MockPersonalController.qml  MockResourceController.qml  MockThemeController.qml  MockTopController.qml  NotificationBell.qml  NotificationCenter.qml  NotificationToastHost.qml  PdfPreviewDialog.qml  PdfPreviewGroupDialog.qml  PdfPreviewTopBoardDialog.qml  PersonalHistorySection.qml  PersonalStatsSection.qml  (+13 more)
controllers/: MockPdfExporter.qml  MockThemeController.qml  authcontroller.cpp  authcontroller.h
core/: databasemanager.cpp  databasemanager.h  geminicontroller.cpp  geminicontroller.h
documents/: bao_cao_nguoi_c.md  cpp_complexity_analysis.md  deviation_report.md  m7_m10_analysis.md  milestone_analysis.md  person_a_backend.md  person_b_frontend.md  person_c_ai_integration.md  person_c_guide.md  project_overview.md  qt_design_guide.md  work_connection_analysis.md
documents/Train_AI/: AI_2.0.docx  AI_2.1.docx  AI_2.2.docx  AI_2.3.docx  AI_2.4.docx  AI_2.5.docx  AI_2.6.docx  AI_2.7.docx  AI_2.8.docx  AI_3.0.docx  AI_3.1.docx  AI_3.2.docx  AI_3.3.docx  AI_3.4.docx  AI_3.5.docx  AI_4.0.docx  AI_4.1.docx  AI_4.2.docx  AI_4.3.docx  AI_4.4.docx  AI_4.5.docx  AI_4.6.docx  AI_4.7.docx  AI_4.8.docx  AI_4.9.docx  Train_1.01.docx  Train_1.02.docx  Train_1.03.docx  Train_1.04.docx  Train_1.05.docx  Train_1.11.docx  Train_1.12.docx  Train_1.13.docx  Train_1.14.docx  Train_1.15.docx
mocks/: MockAuthController.qml
scripts/: gemini_bridge.py
